client/components/messaging/thread-preview/thread-preview.scss
.app-thread {
    background: #F6F6F6;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    padding: 8px 12px 8px;
    margin-top: 10px;
    margin-bottom: 10px;

    .app-thread-header-avatar {
        padding-right: 10px;
      }

    .app-thread-header-metadata {
        display: flex;
        flex-flow: column nowrap;
        flex-grow: 1;
        align-items: flex-start;
        padding-right: 8px;
    }

    .app-thread-header-metadata-line {
        align-items: flex-end;
        }

    .app-thread-header-title {
        font-size: 18px;
        font-weight: 500;
        padding-right: 6px;
    }

    .app-thread-header-subtitle {
        color: #232F34;
        font-style: italic;
        font-weight: 400;
        font-size: 11px;
        line-height: 13px;

        width: 300px;
        display: block;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

    }

    .app-thread-header-time {
        font-size: 13px;
    }

    .app-thread-header-open-thread {
        display: flex;
        flex-grow: 1;
        justify-content: flex-end;
    }

    .app-thread-header-actions {
        display: flex;
        flex-flow: row nowrap;
        justify-content: flex-end;
        padding-right: 4px;
    }
}

